# MeliSimLake

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROMPT_MELISIMLAKE.md  README.md  RUNBOOK.md  conftest.py  docker-compose.melisim-network.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dbt-ci.yml
docs/: api_reference.md  data_dictionary.md  ml_models.md  pipeline_guide.md
feature_store/feature_repo/: data_sources.py  entities.py  feature_store.yaml
feature_store/feature_repo/feature_views/: product_features.py  session_features.py  user_features.py
infra/: README.md
infra/airflow/: Dockerfile  requirements.txt
infra/airflow/config/: airflow.cfg
infra/datahub/: postgres-init.sql
infra/datahub/glossary/: business_glossary.yml
infra/datahub/recipes/: airflow_lineage.yml  dbt_cloud.yml  minio_s3.yml  mlflow_recipe.yml  postgres_airflow.yml  postgres_mlflow.yml
infra/debezium/: README.md  register.sh
infra/debezium/connectors/: melisim-mysql.json  melisim-postgres.json
infra/grafana/dashboards/: business_kpis.json  dashboards.yml  data_quality.json  ml_metrics.json  pipeline_health.json
infra/kafka/: topics-init.sh
infra/minio/: buckets-init.sh
infra/prometheus/: prometheus.yml
infra/trino/: probe_gold.py  register_gold_tables.py
infra/trino/etc/: config.properties  jvm.config  node.properties
ingestion/: README.md
ingestion/api_fetcher/: README.md
ingestion/api_fetcher/src/: fetcher_main.py
ingestion/api_fetcher/tests/: test_fetcher.py
ingestion/batch_csv_loader/: README.md
ingestion/batch_csv_loader/src/: csv_loader.py
ingestion/batch_csv_loader/tests/: test_csv_loader.py
ingestion/cdc_consumer/: Dockerfile  README.md
ingestion/cdc_consumer/src/: cdc_streaming_job.py  config.py  spark_builder.py
ingestion/cdc_consumer/tests/: test_cdc_streaming_job.py
ingestion/events_consumer/: Dockerfile
ingestion/events_consumer/src/: events_streaming_job.py
ingestion/kafka_events_consumer/: Dockerfile  README.md
ingestion/kafka_events_consumer/src/: events_streaming_job.py  schemas.py
ingestion/kafka_events_consumer/tests/: test_schemas.py
ingestion/web_scraper/: Dockerfile  README.md
ingestion/web_scraper/src/: scraper_main.py
ingestion/web_scraper/tests/: test_scraper.py
ml/churn_xgboost/: README.md
ml/churn_xgboost/src/: train.py
ml/churn_xgboost/tests/: test_churn.py
ml/demand_forecast_lstm/: README.md
ml/demand_forecast_lstm/src/: model.py  train.py
ml/demand_forecast_lstm/tests/: test_forecast.py
ml/fraud_detection/: README.md
ml/fraud_detection/src/: isolation_forest.py  xgboost_classifier.py
ml/fraud_detection/tests/: test_fraud.py
ml/recommendation_als/: README.md
ml/recommendation_als/src/: inference.py  train.py
ml/recommendation_als/tests/: test_als.py
ml/recommendation_gru4rec/: README.md
ml/recommendation_gru4rec/src/: data.py  (+2 more)
ml/recommendation_sasrec/: README.md
ml/shared/: feature_loader.py  metrics.py  mlflow_helpers.py
ml/trainer/: Dockerfile  requirements.txt
orchestration/dags/: governance_datahub_ingest.py  ingestion_api_hourly.py  ingestion_csv_daily.py  ingestion_scraping_daily.py  ml_training_daily.py  ml_training_weekly.py  quality_great_expectations.py  transformation_dbt_to_gold.py  transformation_spark_to_silver.py
scripts/: reset_lstm_model.py
serving/dashboard/: Dockerfile
serving/ml_api/: Dockerfile
tests/e2e/: test_api_e2e.py
tests/integration/: test_ml_training_smoke.py
transformation/dbt_project/: README.md  dbt_project.yml  profiles.yml
transformation/great_expectations/: README.md  great_expectations.yml
transformation/spark_jobs/: Dockerfile  README.md
(+58 files in other folders)
