[tool.poetry]
name = "melisimlake"
version = "0.1.0"
description = "Plataforma Lakehouse e ML integrada ao Melisim"
authors = ["Willian <mzmvyp170287@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ingestion" },
    { include = "transformation" },
    { include = "ml" },
    { include = "serving" },
    { include = "simulator" },
    { include = "feature_store" },
    { include = "orchestration" },
]

[tool.poetry.dependencies]
python = "^3.11"

# Configuração
pydantic = "^2.8"
pydantic-settings = "^2.4"
python-dotenv = "^1.0"

# Logging
loguru = "^0.7"

# Dados — small/medium
pandas = "^2.2"
polars = "^1.5"
pyarrow = "^17.0"

# Storage
boto3 = "^1.35"
s3fs = "^2024.9"

# Kafka
kafka-python = "^2.0"
confluent-kafka = "^2.5"
fastavro = "^1.9"

# ML — clássico
scikit-learn = "^1.5"
xgboost = "^2.1"
lightgbm = "^4.5"
implicit = "^0.7"
optuna = "^4.0"
shap = "^0.46"

# MLflow
mlflow = "^2.16"

# Feast
feast = {version = "^0.40", extras = ["postgres"]}

# Serving
fastapi = "^0.115"
uvicorn = {version = "^0.30", extras = ["standard"]}
slowapi = "^0.1"
httpx = "^0.27"

# Dashboard
streamlit = "^1.38"
plotly = "^5.24"

# HTTP / scraping
httpx = "^0.27"
tenacity = "^9.0"
playwright = "^1.47"

# Qualidade de dados
great-expectations = "^1.1"
pandera = {version = "^0.20", extras = ["pyspark"]}

# Orchestration — cliente Airflow
apache-airflow-client = "^2.10"

# LLM local
ollama = "^0.3"

# Utilitários
typer = "^0.12"
rich = "^13.8"
croniter = "^3.0"
pendulum = "^3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"
ruff = "^0.6"
mypy = "^1.11"
pre-commit = "^3.8"
ipykernel = "^6.29"

[tool.poetry.group.spark.dependencies]
# PySpark é instalado separadamente para compatibilidade com Java
pyspark = "^3.5"
delta-spark = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Ferramentas
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["ingestion", "transformation", "ml", "serving", "simulator", "feature_store", "orchestration", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "S101",    # Use of assert (ok em testes)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"orchestration/dags/**" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["ingestion", "transformation", "ml", "serving", "simulator", "feature_store", "orchestration"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "transformation/dbt_project/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "ingestion", "transformation", "ml", "serving", "simulator"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ingestion", "transformation", "ml", "serving", "simulator", "feature_store"]
omit = ["*/tests/*", "*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
